# prompt-trace

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: overhead_benchmark.py
benchmarks/results/: overhead.json
src/prompt_trace/: __init__.py  cli.py  diff.py  replay.py  span.py  storage.py  tracer.py
src/prompt_trace/instrumenters/: __init__.py  anthropic.py
tests/: test_benchmark_smoke.py  test_diff.py  test_instrumenter.py  test_replay.py  test_span.py  test_storage.py  test_tracer.py
